<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.cagataysencan.template.feature.splash.SplashFragment"
        android:label="@string/splash_title">

        <action
            android:id="@+id/action_splash_to_auth"
            app:destination="@id/authFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splash_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/authFragment"
        android:name="com.cagataysencan.template.feature.auth.AuthFragment"
        android:label="@string/auth_title">

        <action
            android:id="@+id/action_auth_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/authFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.cagataysencan.template.feature.home.HomeFragment"
        android:label="@string/home_title">

        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />

    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.cagataysencan.template.feature.settings.SettingsFragment"
        android:label="@string/settings_title" />

</navigation>
